실습 12/2016320161.txt
1.
(a)
Point(double,double)
Point()
Point(double,double)
x1 = 10.0, y1 = 10.0
x2 = 0.0, y2 = 0.0

(b)
Error:(9, 13) java: call to this must be first statement in constructor
this 함수는 생성자의 첫쨰 줄에 서만 호출 되어야 한다.

2.
(a)
distance() source code submit

(b)
Point(double,double)
Point()
Point(double,double)
distance = 50.0


3.
(a)
x = This is MyObj
y = This is SimpleObj

(b)
SomeObj.java:6: error: method does not override or implement a method from a supertype
    @Override
    ^
1 error

오버라이드 할 함수가 존재하지 않는다


4.
(a)
Vector@61bbe9ba
inner product = 0.0

(b)
Error:(10, 30) java: unreported exception java.lang.Exception; must be caught or declared to be thrown

예외를 처리 하지 않았다

(c)
Vector@61bbe9ba
Exception in thread "main" DimException
	at Vector.product(Vector.java:27)
	at TestVector2.main(TestVector2.java:10)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at com.intellij.rt.execution.application.AppMain.main(AppMain.java:147)

v1.product 에서 throw 된 예외이다
